can`t display images(

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% load static %}
+<header class="header">
+        <div class="container">
+            <div class="row align-items-center justify-content-lg-between">
+                <div class="col-lg-auto">
+                    <a href="/index.html"><img src={% static "img/VC_Logo 1.png" %} alt="" class="logo"></a>
+                </div>
+                <div class="col-lg-auto">
+                    <nav class="">
+                        <ul class="nav d-flex justify-content-center">
+                            <li class="nav__item">
+                                <a href="/index.html">Главная</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="/about.html">О центре</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="/features.html">Направления</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="/teachers.html">Преподователи</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="/scheadule.html">Расписание</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="/gallerey.html">Галерея</a>
+                            </li>
+                            <li class="nav__item">
+                                <a href="/contacts.html">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            </div>
+    </header>
