--- a/templates/base.html
+++ b/templates/base.html
@@ -2,71 +2,19 @@
 {% load static %}
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <link rel="stylesheet" href="{% static '/css/slick.css'%}">
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
-</head>
+{% include 'include/head.html' %}
 
 <body>
-    <header class="header">
-        <div class="container">
-            <div class="row align-items-center justify-content-lg-between">
-                <div class="col-lg-auto">
-                    <a href="/index.html"><img src="img/VC_Logo 1.png" alt="" class="logo"></a>
-                </div>
-                <div class="col-lg-auto">
-                    <nav class="">
-                        <ul class="nav d-flex justify-content-center">
-                            <li class="nav__item">
-                                <a href="/index.html">Главная</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="/about.html">О центре</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="/features.html">Направления</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="/teachers.html">Преподователи</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="/scheadule.html">Расписание</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="/gallerey.html">Галерея</a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="/contacts.html">Контакты</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            </div>
-    </header>
 
+    {% include 'include/header.html' %}
     <main>
-        {% block main %}
+        {% block content %}
 
-        {% endblock main %}
+        {% endblock content %}
     </main>
 
+    {% include 'include/footer.html' %}
 
-    <footer class="footer">
-        <div class="container footer__container">
-            <div class="email">
-                example@mail.ru
-            </div>
-            <div class="tel">
-                +7912715867
-            </div>
-        </div>
-    </footer>
     </div>
 
 
