--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,6 @@
 
 {% block content %}
     <div class="container">
-    {{ page.content }}
+    {{ page.content|safe }}
     </div>
 {% endblock content %}
