--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -1,5 +1,5 @@
 {% load static %}
-<header class="header">
+<header class="header" id="header">
         <div class="container">
             <div class="row align-items-center justify-content-lg-between">
                 <div class="col-lg-auto">
