--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -7,4 +7,6 @@
 
     <link rel="stylesheet" href="{% static 'css/slick.css'%}">
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    <link rel="stylesheet" href="{% static 'css/bvi.min.css'%}">
+
 </head>
