--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
         {% endblock content %}
     </main>
-    <a href="#" class="bvi-open" title="Версия сайта для слабовидящих">Версия сайта для слабовидящих</a>
+
     {% include 'include/footer.html' %}
 
     <script>
@@ -40,6 +40,15 @@
     <script src="{% static 'js/js.cookie.min.js'%}"></script>
     <script src="{% static 'js/bvi-init.min.js'%}"></script>
     <script src="{% static 'js/bvi.min.js'%}"></script>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/picturefill/2.3.1/picturefill.min.js"></script>
+
+    <script src="{% static 'js/lightgallery-all.min.js'%}"></script>
+
+    <script src="{% static 'js/jquery.mousewheel.min.js'%}"></script>
 
 </body>
 
