--- a/templates/include/head.html
+++ b/templates/include/head.html
@@ -8,5 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/slick.css'%}">
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
     <link rel="stylesheet" href="{% static 'css/bvi.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/lightgallery.css'%}">
+
 
 </head>
