once again i have no inea what i am commiting, because i forgot to do in a month ago

--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -2,9 +2,11 @@
 
 
 {% block content %}
+    <div class="container">
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">отправить</button>
     </form>
+    </div>
 {% endblock content %}
