--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 
                 <h1 class="col offer__title">Центр развития детей дошкольного возраста</h1>
 
-                <h2><a href="#" class="offer__link">УЗНАТЬ БОЛЬШЕ</a></h2>
+                <h2><a href="/info/О центре" class="offer__link">УЗНАТЬ БОЛЬШЕ</a></h2>
             </div>
         </div>
     </section>
