--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -22,6 +22,9 @@
                             <li class="nav__item">
                                 <a href="{% url 'News' %}">Новости</a>
                             </li>
+                            <li class="nav__item">
+                                <a href="{% url 'contact_form' %}">связаться с нами</a>
+                            </li>
 
                             {% for i in info_pages %}
                             <li class="nav__item">
