--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,6 +81,7 @@ a:hover {
 
 .offer__title {
   margin: auto;
+  margin-bottom: 40px;
   text-align: center;
 }
 
@@ -89,6 +90,7 @@ a:hover {
   width: -moz-fit-content;
   width: fit-content;
   margin: auto;
+
   font-weight: bold;
   padding: 10px;
   border-radius: 10px;
@@ -229,6 +231,7 @@ a:hover {
 }
 
 .footer {
+  margin-top: 40px;
   background-color: #333333;
 }
 
