added more margin to main bacause it being overlapped by header when logo loaded too late(why the fuck it is happening is a mystery -_-)

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -23,7 +23,7 @@
                                 <a href="{% url 'News' %}">Новости</a>
                             </li>
                             <li class="nav__item">
-                                <a href="{% url 'contact_form' %}">связаться с нами</a>
+                                <a href="{% url 'contact_form' %}">обратная связь</a>
                             </li>
 
                             {% for i in info_pages %}
